--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     </section>
 
     <!-- Testimonials -->
-    <section id="testimonials">
+<!--     <section id="testimonials">
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">What they Think?</span></h6>
             <h2 class="section-heading text-center">Testimonials</h2>
@@ -538,10 +538,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Blogs -->
-    <section id="blogs">
+<!--     <section id="blogs">
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Do I Write?</span></h6>
             <h2 class="section-heading text-center">My Blogs</h2>
@@ -594,10 +594,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact -->
-    <section id="contact">
+<!--     <section id="contact">
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">What's next!</span></h6>
             <h2 class="section-heading text-center">Get In Touch</h2>
@@ -636,12 +636,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer id="footer">
         <div class="container">
-            <p class="text-center copyright-text">Made with <span>Bootstrap, HTML, CSS, JS</span> and a dash of <span class="heart-icon"><i class="bi bi-hearts"></i></span> by <span>Vijay</span>.</p>
+            <p class="text-center copyright-text">Feito em <span>HTML</span></i></span> por <span>Martim Teixeira</span>.</p>
         </div>
     </footer>
 
