added powerpoint and word embeds

--- a/index.html
+++ b/index.html
@@ -315,19 +315,16 @@
                                     <img src="./assets/images/projects/PowerPoint.svg" class="img-fluid icon" alt="PowerPoint Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="card-title title" target="_blank">Inteligencia Artificial</a>
+                                    <a href="https://1drv.ms/p/s!Ajh8PdTN94uvg48eelmDfwTakB6omg?e=GWGjhm" class="card-title title" target="_blank">Inteligencia Artificial</a>
                                     <p class="stacks m-0">PowerPoint</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://1drv.ms/p/s!Ajh8PdTN94uvg48eelmDfwTakB6omg?e=GWGjhm" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>                                                                                 
                         <div class="banner-container">
-                            <div class="overlay">
-                                <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
-                            </div>
-                            <img src="./assets/images/projects/TurtleBanner.png" class="card-img-top banner" alt="Turtle Banner">
+                            <iframe src="https://1drv.ms/p/s!Ajh8PdTN94uvg48eqvkmozjLN2usxA?embed=1&amp;em=2&amp;wdAr=1.7777777777777777" width="395px" height="288px" frameborder="0">Este é um documento incorporado do <a target="_blank" href="https://office.com">Microsoft Office</a>, com tecnologia <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                         </div>
                     </div>
                 </div>
@@ -336,30 +333,19 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/Turtle.svg" class="img-fluid icon" alt="Turtle Logo">
+                                    <img src="./assets/images/projects/Word.svg" class="img-fluid icon" alt="Turtle Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="card-title title" target="_blank">Turtle</a>
+                                    <a href="https://1drv.ms/w/s!Ajh8PdTN94uvg48dsCUExVmSXM5hgQ?e=eatPOK" class="card-title title" target="_blank">Turtle</a>
                                     <p class="stacks m-0">Python</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://1drv.ms/w/s!Ajh8PdTN94uvg48dsCUExVmSXM5hgQ?e=eatPOK" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="show-code-container text-center">
-                            <button id="showCodeBtn" class="btn show-code-btn">
-                                <i class="bi bi-code-slash"></i> Show Code
-                            </button>
-                            <pre id="codeContainer" style="display: none;">
-                                <code id="codeContent" class="language-python"></code>
-                            </pre>
-                        </div>                                                                                       
+                        </div>                                                                        
                         <div class="banner-container">
-                            <div class="overlay">
-                                <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
-                            </div>
-                            <img src="./assets/images/projects/TurtleBanner.png" class="card-img-top banner" alt="Turtle Banner">
+                            <iframe src="https://1drv.ms/w/s!Ajh8PdTN94uvg48d8UNgCdLSEx6t-A?embed=1&amp;em=2" width="395px" height="288px" zoom="50%"frameborder="0">Este é um documento incorporado do <a target="_blank" href="https://office.com">Microsoft Office</a>, com tecnologia <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                         </div>
                     </div>
                 </div>
