--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </div>
                         <div class="show-code-container text-center">
                             <button id="showCodeBtn" class="btn show-code-btn">
-                                <i class="bi bi-code-slash"></i> Show Code
+                                <i class="bi bi-code-slash"></i> Expandir Código
                             </button>
                             <pre id="codeContainer" style="display: none;">
                                 <code id="codeContent" class="language-python"></code>
@@ -339,22 +339,22 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/PowerPoint.svg" class="img-fluid icon" alt="PowerPoint Logo">
+                                    <img src="./assets/images/projects/photoshop.svg" class="img-fluid icon" alt="PhotoShop Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="card-title title" target="_blank">Inteligencia Artificial</a>
-                                    <p class="stacks m-0">PowerPoint</p>
+                                    <a href="https://ibb.co/zHJQGyJY" class="card-title title" target="_blank">Costa Lisa</a>
+                                    <p class="stacks m-0">Mona Lisa + António Costa</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://ibb.co/zHJQGyJY" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>                                                                                 
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://ibb.co/zHJQGyJY" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/TurtleBanner.png" class="card-img-top banner" alt="Turtle Banner">
+                            <img src="./assets/images/projects/Final1.png" class="card-img-top banner" alt="Turtle Banner">
                         </div>
                     </div>
                 </div>
@@ -363,30 +363,46 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/Turtle.svg" class="img-fluid icon" alt="Turtle Logo">
+                                    <img src="./assets/images/projects/photoshop.svg" class="img-fluid icon" alt="Turtle Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="card-title title" target="_blank">Turtle</a>
-                                    <p class="stacks m-0">Python</p>
+                                    <a href="https://ibb.co/ZzFSsFnj" class="card-title title" target="_blank">Mine Tyson</a>
+                                    <p class="stacks m-0">Minecraft + Mike Tyson</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://ibb.co/ZzFSsFnj" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="show-code-container text-center">
-                            <button id="showCodeBtn" class="btn show-code-btn">
-                                <i class="bi bi-code-slash"></i> Show Code
-                            </button>
-                            <pre id="codeContainer" style="display: none;">
-                                <code id="codeContent" class="language-python"></code>
-                            </pre>
-                        </div>                                                                                       
+                        </div>                                
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://ibb.co/ZzFSsFnj" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/TurtleBanner.png" class="card-img-top banner" alt="Turtle Banner">
+                            <img src="./assets/images/projects/Final2.png" class="card-img-top banner" alt="Turtle Banner">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="card project-card">
+                        <div class="card-body">
+                            <div class="d-flex align-items-center">
+                                <div class="col-2">
+                                    <img src="./assets/images/projects/photoshop.svg" class="img-fluid icon" alt="PhotoShop Logo">
+                                </div>
+                                <div class="col-7 p-0">
+                                    <a href="https://ibb.co/gZtN7Mdb" class="card-title title" target="_blank">Fortnite BattleBus</a>
+                                    <p class="stacks m-0">Autocarro do Fortnite mas realista</p>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <a href="https://ibb.co/gZtN7Mdb" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                </div>
+                            </div>
+                        </div>                                                                                 
+                        <div class="banner-container">
+                            <div class="overlay">
+                                <a href="https://ibb.co/gZtN7Mdb" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                            </div>
+                            <img src="./assets/images/projects/Final3.png" class="card-img-top banner" alt="Turtle Banner">
                         </div>
                     </div>
                 </div>
@@ -395,7 +411,7 @@
     </section>
 
     <!-- Video -->
-    <section id="video">
+<!--     <section id="video">
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Video</span></h6>
             <div class="row justify-content-center mt-4 gy-4" data-aos="fade-up" data-aos-delay="200">
@@ -441,7 +457,7 @@
                         </div>
                         <div class="show-code-container text-center">
                             <button id="showCodeBtn" class="btn show-code-btn">
-                                <i class="bi bi-code-slash"></i> Show Code
+                                <i class="bi bi-code-slash"></i> Expandir Código
                             </button>
                             <pre id="codeContainer" style="display: none;">
                                 <code id="codeContent" class="language-python"></code>
@@ -456,7 +472,7 @@
                     </div>
                 </div>
 
-
+ -->
     </section>
 
     <!-- Audio -->
@@ -469,54 +485,24 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/PowerPoint.svg" class="img-fluid icon" alt="PowerPoint Logo">
+                                    <img src="./assets/images/projects/audacity.svg" class="img-fluid icon" alt="Audacity Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="card-title title" target="_blank">Inteligencia Artificial</a>
-                                    <p class="stacks m-0">PowerPoint</p>
+                                    <a href="https://voca.ro/12SiTvUKaXKo" class="card-title title" target="_blank">Playlist Rádio</a>
+                                    <p class="stacks m-0">5 Musicas</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://voca.ro/12SiTvUKaXKo" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>                                                                                 
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://voca.ro/12SiTvUKaXKo" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/TurtleBanner.png" class="card-img-top banner" alt="Turtle Banner">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="card project-card">
-                        <div class="card-body">
-                            <div class="d-flex align-items-center">
-                                <div class="col-2">
-                                    <img src="./assets/images/projects/Turtle.svg" class="img-fluid icon" alt="Turtle Logo">
-                                </div>
-                                <div class="col-7 p-0">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="card-title title" target="_blank">Turtle</a>
-                                    <p class="stacks m-0">Python</p>
-                                </div>
-                                <div class="col-3 align-middle">
-                                    <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="show-code-container text-center">
-                            <button id="showCodeBtn" class="btn show-code-btn">
-                                <i class="bi bi-code-slash"></i> Show Code
-                            </button>
-                            <pre id="codeContainer" style="display: none;">
-                                <code id="codeContent" class="language-python"></code>
-                            </pre>
-                        </div>                                                                                       
-                        <div class="banner-container">
-                            <div class="overlay">
-                                <a href="https://github.com/Tex27/TurtleImageGenerator" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
-                            </div>
-                            <img src="./assets/images/projects/TurtleBanner.png" class="card-img-top banner" alt="Turtle Banner">
+                            <audio controls>
+                                <source src="PlaylistMartimTeixeira.mp3" type="audio/mpeg">
+                              </audio>
                         </div>
                     </div>
                 </div>
