--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             </div>
                         </div>                                                                        
                         <div class="banner-container">
-                            <iframe src="https://1drv.ms/w/s!Ajh8PdTN94uvg48d8UNgCdLSEx6t-A?embed=1&amp;em=2" width="395px" height="288px" zoom="50%"frameborder="0">Este é um documento incorporado do <a target="_blank" href="https://office.com">Microsoft Office</a>, com tecnologia <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+                            <iframe src="https://1drv.ms/w/s!Ajh8PdTN94uvg48d8UNgCdLSEx6t-A?embed=1&amp;em=2" width="395px" height="288px" wdZoomPageWidth = true frameborder="0">Este é um documento incorporado do <a target="_blank" href="https://office.com">Microsoft Office</a>, com tecnologia <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                         </div>
                     </div>
                 </div>
