--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             </div>
                         </div>                                                                        
                         <div class="banner-container">
-                            <iframe src="https://1drv.ms/w/s!Ajh8PdTN94uvg48d8UNgCdLSEx6t-A?embed=1&amp;em=2" width="395px" height="288px" wdZoomPageWidth frameborder="0">Este é um documento incorporado do <a target="_blank" href="https://office.com">Microsoft Office</a>, com tecnologia <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+                            <iframe src="https://1drv.ms/w/s!Ajh8PdTN94uvg48d8UNgCdLSEx6t-A?embed=1&amp;em=2" width="395px" height="288px" frameborder="0">Este é um documento incorporado do <a target="_blank" href="https://office.com">Microsoft Office</a>, com tecnologia <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                         </div>
                     </div>
                 </div>
@@ -522,11 +522,11 @@
                                     <img src="./assets/images/projects/pfpfinder-icon.png" class="img-fluid icon" alt="PfpFinder Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://pfpfinder.com/" class="card-title title" target="_blank">SNKRSAPI</a>
+                                    <a href="https://github.com/Tex27/SNKRS" class="card-title title" target="_blank">SNKRSAPI</a>
                                     <p class="stacks m-0">Python</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://pfpfinder.com/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://github.com/Tex27/SNKRS" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -536,7 +536,7 @@
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://pfpfinder.com/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://github.com/Tex27/SNKRS" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
                             <img src="./assets/images/projects/pfpfinder-banner.webp" class="card-img-top banner" alt="PfpFinder Banner">
                         </div>
