--- a/index.html
+++ b/index.html
@@ -519,26 +519,25 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/pfpfinder-icon.png" class="img-fluid icon" alt="PfpFinder Logo">
+                                    <img src="./assets/images/projects/snkrs.png" class="img-fluid icon" alt="SNKRS Logo">
                                 </div>
                                 <div class="col-7 p-0">
                                     <a href="https://github.com/Tex27/SNKRS" class="card-title title" target="_blank">SNKRSAPI</a>
-                                    <p class="stacks m-0">Python</p>
+                                    <p class="stacks m-0">PYTHON</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://github.com/Tex27/SNKRS" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://github.com/Tex27/SNKRS" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="description-container">
-                            <code>print(teste)</code>
-                            <p class="description">Find the best profile pictures and banners for all your social media accounts.</p>
+                            <p class="description">Web-Scrapper para encontrar qualquer sapatilha no site goat.com ao preço mais barato.</p>
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
                                 <a href="https://github.com/Tex27/SNKRS" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/pfpfinder-banner.webp" class="card-img-top banner" alt="PfpFinder Banner">
+                            <img src="./assets/images/projects/github.png" class="card-img-top banner" alt="SNKRS Banner">
                         </div>
                     </div>
                 </div>
@@ -548,25 +547,25 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/bikekart-icon.png" class="img-fluid icon" alt="BikeKart Template Logo">
+                                    <img src="./assets/images/projects/discord.svg" class="img-fluid icon" alt="Discord Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="card-title title" target="_blank">DiscordBot</a>
-                                    <p class="stacks m-0">HTML | CSS</p>
+                                    <a href="https://github.com/Tex27/discordbot" class="card-title title" target="_blank">DiscordBot</a>
+                                    <p class="stacks m-0">PYTHON</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://github.com/Tex27/discordbot" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="description-container">
-                            <p class="description">BikeKart is just another bike store web template with mulitple sections.</p>
+                            <p class="description">Bot para a rede social Discord, focado na moderação.</p>
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://github.com/Tex27/discordbot" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
+                            <img src="./assets/images/projects/github.png" class="card-img-top banner" alt="Discord Banner">
                         </div>
                     </div>
                 </div>
@@ -575,25 +574,25 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/bikekart-icon.png" class="img-fluid icon" alt="BikeKart Template Logo">
+                                    <img src="./assets/images/projects/fivem.png" class="img-fluid icon" alt="FiveM Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="card-title title" target="_blank">FiveM - QB-Lock</a>
-                                    <p class="stacks m-0">HTML | CSS</p>
+                                    <a href="https://github.com/Tex27/qb-lock" class="card-title title" target="_blank">FiveM - QB-Lock</a>
+                                    <p class="stacks m-0">HTML | CSS | LUA</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://github.com/Tex27/qb-lock" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="description-container">
-                            <p class="description">BikeKart is just another bike store web template with mulitple sections.</p>
+                            <p class="description">Script com função de "mini jogo" para a plataforma FiveM.</p>
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://github.com/Tex27/qb-lock" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
+                            <img src="./assets/images/projects/github.png" class="card-img-top banner" alt="FiveM Banner">
                         </div>
                     </div>
                 </div>
@@ -602,25 +601,25 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/bikekart-icon.png" class="img-fluid icon" alt="BikeKart Template Logo">
+                                    <img src="./assets/images/projects/discord.svg" class="img-fluid icon" alt="Cloner Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="card-title title" target="_blank">Server Cloner</a>
-                                    <p class="stacks m-0">HTML | CSS</p>
+                                    <a href="https://github.com/Tex27/servercloner" class="card-title title" target="_blank">Server Cloner</a>
+                                    <p class="stacks m-0">PYTHON</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://github.com/Tex27/servercloner" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="description-container">
-                            <p class="description">BikeKart is just another bike store web template with mulitple sections.</p>
+                            <p class="description">Um programa que permite clonar servidores de discord sem ser necessário ser Admistrador.</p>
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://github.com/Tex27/servercloner" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
+                            <img src="./assets/images/projects/github.png" class="card-img-top banner" alt="Cloner Banner">
                         </div>
                     </div>
                 </div>
@@ -629,25 +628,25 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/bikekart-icon.png" class="img-fluid icon" alt="BikeKart Template Logo">
+                                    <img src="./assets/images/projects/steam.png" class="img-fluid icon" alt="Steam Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="card-title title" target="_blank">Fivem - Server</a>
-                                    <p class="stacks m-0">HTML | CSS</p>
+                                    <a href="https://github.com/Tex27/steammarketsniper" class="card-title title" target="_blank">Steam Market Sniper</a>
+                                    <p class="stacks m-0">PYTHON</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://github.com/Tex27/steammarketsniper" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="description-container">
-                            <p class="description">BikeKart is just another bike store web template with mulitple sections.</p>
+                            <p class="description">Um web scrapper que utiliza o mercado da steam.com para encontrar skins especificas com determinadas caracteristicas.</p>
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://github.com/Tex27/steammarketsniper" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
+                            <img src="./assets/images/projects/github.png" class="card-img-top banner" alt="Steam Banner">
                         </div>
                     </div>
                 </div>
@@ -656,25 +655,25 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="./assets/images/projects/bikekart-icon.png" class="img-fluid icon" alt="BikeKart Template Logo">
+                                    <img src="./assets/images/projects/COD.png" class="img-fluid icon" alt="COD Logo">
                                 </div>
                                 <div class="col-7 p-0">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="card-title title" target="_blank">Geografia - WebSite</a>
-                                    <p class="stacks m-0">HTML | CSS</p>
+                                    <a href="https://github.com/Tex27/HorizonMW-Client" class="card-title title" target="_blank">HorizeonMW - Client</a>
+                                    <p class="stacks m-0">ASSEMBLE</p>
                                 </div>
                                 <div class="col-3 align-middle">
-                                    <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visit <i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                    <a href="https://github.com/Tex27/HorizonMW-Client" class="btn btn-sm primary-bg-btn rounded-5" target="_blank">Visitar <i class="bi bi-arrow-up-right-circle-fill"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="description-container">
-                            <p class="description">BikeKart is just another bike store web template with mulitple sections.</p>
+                            <p class="description">Um launcher alternativo para o Call of Duty MWR, que permite jogar de forma segura o jogo no computador, permitindo também a utilização de mods.</p>
                         </div>
                         <div class="banner-container">
                             <div class="overlay">
-                                <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
+                                <a href="https://github.com/Tex27/HorizonMW-Client" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="./assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
+                            <img src="./assets/images/projects/github.png" class="card-img-top banner" alt="COD Banner">
                         </div>
                     </div>
                 </div>
